src/pages/BorrowPage/components/BorrowTable/BorrowTable.module.less
.tableRoot {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
}

.borrowTable :global {
  .ant-table-tbody > tr > td {
    width: 285px;
  }
  .ant-table-tbody > tr > td:last-child {
    width: 144px;
  }
}

.headerTitleRow {
  display: flex;
  align-items: baseline;
  gap: 8px;
}

.checkbox {
  height: 18px;
  padding-left: 18px;
}

.searchSelect {
  max-width: 750px;
}

.summary {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 12px 16px;
  border-top: 1px solid var(--bg-border);

  @media (max-width: 960px) {
    flex-direction: column;
    gap: 24px;
  }

  @media (max-width: 640px) {
    gap: 16px;
  }
}

.collaterals {
  display: flex;
  gap: 8px;
  align-items: center;
  min-width: 220px;

  @media (max-width: 1240px) {
    display: none;
  }
}

.collateralsTitle {
  font: var(--important-text-xll);
  color: var(--content-primary);

  @media (max-width: 640px) {
    font: var(--important-text-xl);
  }
}

.collateralsSubtitle {
  font: var(--table-header-md);
  color: var(--content-secondary);
  text-transform: uppercase;
  max-width: 100px;

  @media (max-width: 960px) {
    max-width: unset;
  }

  @media (max-width: 640px) {
    font: var(--table-header-sm);
    width: 86px;
  }
}

.statsContainer {
  display: flex;
  justify-content: space-around;
  flex-grow: 1;

  @media (max-width: 960px) {
    width: 100%;
    align-items: space-between;
  }

  @media (max-width: 640px) {
    gap: 8px 8px;
  }
}

.stats {
  p:first-child {
    color: var(--content-secondary);
    font: var(--table-header-md);
    text-transform: uppercase;
  }

  p:last-child {
    color: var(--content-primary);
    font: var(--body-text-md);
    text-align: right;
  }

  @media (max-width: 1240px) {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  @media (max-width: 640px) {
    p:first-child {
      font: var(--table-header-sm);
    }

    p:last-child {
      font: var(--body-text-sm);
    }
  }
}

.summaryBtns {
  display: flex;
  gap: 8px;

  button {
    min-width: 170px;
  }

  @media (max-width: 960px) {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    width: 100%;

    button {
      min-width: unset;
    }
  }
}

.borrowButton {
  width: 128px;
}

.selectButtonText {
  @media (max-width: 1240px) {
    display: none;
  }
}

.selectButtonMobileText {
  @media (min-width: 1241px) {
    display: none;
  }
}

.sortDropdown {
  & > button {
    min-width: 225px;

    @media (max-width: 640px) {
      min-width: 185px;
    }
  }
}

